--- a/README.Rmd
+++ b/README.Rmd
@@ -39,6 +39,6 @@ config <- list(
 
 # set up an observer to pass credentials to our locker
 server <- function(input, output, session) {
-  learningLocker(session, config)
+  rlocker::connect(session, config)
 }
 ```
