--- a/README.Rmd
+++ b/README.Rmd
@@ -27,18 +27,59 @@ devtools::install_github("rpc5102/rlocker")
 ## Example
 __server.R__
 ```{r server}
-library(httr)
 library(shiny)
 library(rlocker)
 
-# sample lrs endpoint and credentials
-config <- list(
-  endpoint = "http://localhost:8000/xapi/", 
-  auth = "Basic YWNjb3VudEBlbWFpbC5jb206c3VwZXJzZWNyZXRwYXNzd29yZA"
-)
+# Contains question setup and rendering functions
+source('./helpers.R')
 
-# set up an observer to pass credentials to our locker
-server <- function(input, output, session) {
-  rlocker::connect(session, config)
-}
+shinyApp(
+  ui = fluidPage(
+
+    # Application title
+    titlePanel("rlocker demo"),
+    hr(),
+
+    # Begin Quiz Questions
+    fluidRow(
+      uiOutput("questionset")
+    ),
+    actionButton("submit", "Submit"),
+    hr(),
+
+    # Statements generated
+    tags$samp(
+      htmlOutput("statements")
+    )
+  ),
+  server = function(input, output, session) {
+
+    # Initialize Learning Locker connection -- Substitute with your own locker
+    rlocker::connect(session, list(
+      endpoint = "http://localhost:8000/xapi/", 
+      auth = "Basic YWNjb3VudEBlbWFpbC5jb206c3VwZXJzZWNyZXRwYXNzd29yZA"
+    ))
+
+    # Set up question list
+    output$questionset <- renderUI({
+      renderQuestionset(questions)
+    })
+
+    output$rnorm <- renderPlot({
+      hist(main = "", xlab = "", ylab = "", rnorm(n = 1000, m = 24.2, sd = 2.2))
+    })
+
+    output$rlnorm <- renderPlot({
+      hist(main = "", xlab = "", ylab = "", rlnorm(1000))
+    })
+
+    # Register events for question inputs
+    registerQuestionEvents(session, questions)
+
+    # Watch for submit button presses
+    observeEvent(input$submit, {
+      session$sendCustomMessage(type = 'create-statement', rlocker::createStatement())
+    })
+  }
+)
 ```
