--- a/README.Rmd
+++ b/README.Rmd
@@ -26,61 +26,44 @@ devtools::install_github("rpc5102/rlocker")
 ```
 
 ## Example
-__server.R__
-```{r server}
+__app.R__
+```{r app.R}
 library(shiny)
 library(rlocker)
 
-# Contains question setup and rendering functions
-# source('./helpers.R')
-
 shinyApp(
-  ui = fluidPage(
-
-    # Application title
-    titlePanel("rlocker demo"),
-    hr(),
-
-    # Begin Quiz Questions
-    fluidRow(
-      uiOutput("questionset")
-    ),
-    actionButton("submit", "Submit"),
-    hr(),
-
-    # Statements generated
-    tags$samp(
-      htmlOutput("statements")
-    )
-  ),
   server = function(input, output, session) {
 
-    # Initialize Learning Locker connection -- Substitute with your own locker
+    # Initialize Learning Locker connection -- substitute with your own locker credentials
     rlocker::connect(session, list(
-      endpoint = "http://localhost:8000/xapi/", 
+      base_url = "https://learning-locker.stat.vmhost.psu.edu/",
+      endpoint = "/data/xAPI/",
       auth = "Basic YWNjb3VudEBlbWFpbC5jb206c3VwZXJzZWNyZXRwYXNzd29yZA"
     ))
 
-    # Set up question list
-    output$questionset <- renderUI({
-      renderQuestionset(questions)
-    })
-
-    output$rnorm <- renderPlot({
-      hist(main = "", xlab = "", ylab = "", rnorm(n = 1000, m = 24.2, sd = 2.2))
-    })
-
-    output$rlnorm <- renderPlot({
-      hist(main = "", xlab = "", ylab = "", rlnorm(1000))
-    })
-
-    # Register events for question inputs
-    registerQuestionEvents(session, questions)
-
-    # Watch for submit button presses
+    # Register events for inputs
+    
+    # Method 1 - sendCustomMessage (uses js)
     observeEvent(input$submit, {
       session$sendCustomMessage(type = 'create-statement', rlocker::createStatement())
+    })
+    
+    # Method 2 - createStatement and store (no js)
+    observeEvent(input$button, {
+      statement <- rlocker::createStatement()
+      rlocker::store(statment)
     })
   }
 )
 ```
+
+## Configuration
+|option|default|
+|---|---|
+|base_url|http://localhost:8000/xapi/|
+|endpoint|/data/xAPI/|
+|auth|Basic YWNjb3VudEBlbWFpbC5jb206c3VwZXJzZWNyZXRwYXNzd29yZA|
+|username|null|
+|password|null|
+
+**Note**: *base_url* should be the hosting location for your locker's API *without* any endpoint or home.
