--- a/README.Rmd
+++ b/README.Rmd
@@ -1,33 +1,46 @@
 ---
-output: github_document
-runtime: shiny
+title: "rlocker"
+output:
+  md_document:
+    variant: gfm
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE,
+  eval = FALSE, 
   comment = "#>",
   fig.path = "man/figures/README-",
   out.width = "100%"
 )
 ```
+
 # rlocker
 
-Used to add Learning Locker xAPI support to Shiny Applications.
+Learning Locker xAPI support for Shiny Applications.
 
-## Installation
+### Assumptions
+
+1. This package assumes that you have [Learning Locker](https://www.ht2labs.com/learning-locker-community/overview/) set up and reachable by your application.
+2. Your application is running in an environment that supports [Cross-Origin Resource Sharing (CORS)](https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS); otherwise api requests will be blocked.
+3. You are given consent by the application user(s) to collect activity data on them.
+
+### Installation
 
 You can install the released version of rlocker from [GitHub](https://github.com/) with:
 
-``` r
+```{r}
 devtools::install_github("rpc5102/rlocker")
 ```
 
-## Example
-__app.R__
-```{r app.R}
+### Example
+
+See the [examples](./inst/examples/) folder for a demo application.
+
+#### Method 1: R handler
+###### app.R
+```{r}
 library(shiny)
 library(rlocker)
 
@@ -36,19 +49,12 @@ shinyApp(
 
     # Initialize Learning Locker connection -- substitute with your own locker credentials
     rlocker::connect(session, list(
-      base_url = "https://learning-locker.stat.vmhost.psu.edu/",
+      base_url = "https://learning-locker.example.com/",
       endpoint = "/data/xAPI/",
       auth = "Basic YWNjb3VudEBlbWFpbC5jb206c3VwZXJzZWNyZXRwYXNzd29yZA"
     ))
 
-    # Register events for inputs
-    
-    # Method 1 - sendCustomMessage (uses js)
-    observeEvent(input$submit, {
-      session$sendCustomMessage(type = 'create-statement', rlocker::createStatement())
-    })
-    
-    # Method 2 - createStatement and store (no js)
+    # Register input event for interactive elements
     observeEvent(input$button, {
       statement <- rlocker::createStatement()
       rlocker::store(statment)
@@ -57,7 +63,60 @@ shinyApp(
 )
 ```
 
-## Configuration
+#### Method 2: JavaScript handler
+###### app.R
+```{r}
+library(shiny)
+library(rlocker)
+
+shinyApp(
+  ui = fluidPage(
+    # Attach js logic
+    tags$script(src = "js/app.js"),
+    
+    # Application title
+    titlePanel("rlocker demo"),
+    fluidRow(
+      actionButton("button", "Press me!")
+    )
+  ),
+  server = function(input, output, session) {
+
+    # Initialize Learning Locker connection -- substitute with your own locker credentials
+    config <- jsonlite::toJSON(
+      list(
+        base_url = "https://learning-locker.example.com/",
+        endpoint = "/data/xAPI/",
+        auth = "Basic YWNjb3VudEBlbWFpbC5jb206c3VwZXJzZWNyZXRwYXNzd29yZA"
+      ),
+      pretty = TRUE,
+      auto_unbox = TRUE,
+      force = TRUE
+    )
+    
+    session$sendCustomMessage(type = 'rlocker-setup', config)
+    
+    # Register input events for interactive elements
+    observeEvent(input$button, {
+      session$sendCustomMessage(type = 'rlocker-store', rlocker::createStatement())
+    })
+  }
+)
+```
+###### www/js/app.js
+```{js}
+Shiny.addCustomMessageHandler('rlocker-setup', function(config) {
+  /* connection logic */
+});
+
+Shiny.addCustomMessageHandler('rlocker-store', function(values) {
+  /* storage logic */
+});
+```
+
+See [adlnet/xAPIWrapper](https://github.com/adlnet/xAPIWrapper/) for JavaScript implementations.
+
+### Configuration
 |option|default|
 |---|---|
 |base_url|http://localhost:8000/xapi/|
@@ -67,3 +126,4 @@ shinyApp(
 |password|null|
 
 **Note**: *base_url* should be the hosting location for your locker's API *without* any endpoint or home.
+
