--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-# rlocker
+# rlocker <img src="https://github.com/rpc5102/rlocker/blob/master/rlocker.png?raw=true" align="right" height=140>
+
+<!-- badges: start -->
+[![lifecycle](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+[![CRAN status](https://www.r-pkg.org/badges/version/rlocker)](https://cran.r-project.org/package=rlocker)
+[![License: GPLv3](https://img.shields.io/github/license/rpc5102/rlocker.svg?style=flat)](https://opensource.org/licenses/GPL-3.0)
+<!-- badges: end -->
 
 Learning Locker xAPI support for Shiny Applications.
 
